# cgc

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  scratch_build_story.py  scratch_build_story_with_audio.py  scratch_build_story_with_audio_alignment.py  test.py
cgc/: __init__.py  config.py  env.py  pipeline.py  voices.py
cgc/adapters/: alignment.py  fetcher.py  storage.py  subtitles.py  tts.py
cgc/domain/: alignment.py  audio.py  story.py  subtitle_chunking.py  subtitles.py  timeline.py  types.py  validation.py
cgc/settings/: user.py
cgc/tools/: bootstrap_models.py  voice_sampler.py
cgc/video/: ass_karaoke.py  assemble.py  progress.py  render_board.py  render_scene.py  subtitle_layout.py
cgc/voices/: __init__.py  american_english.py  brazilian_portuguese.py  british_english.py  french.py  hindi.py  italian.py  japanese.py  mandarin_chinese.py  models.py  names.py  ratings.py  registry.py  selection.py  spanish.py  voices_us.py
debug/: render_board_from_story.py  render_scenes_from_story.py
examples/: 1ORTExZg.yaml
prompts/: story_from_lichess_game.yaml
scripts/: benchmark.py  example.yaml
