[project]
name = "cgc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-chess",
  "requests",
  "pyyaml",
  "numpy",
  "soundfile",
  "imageio[ffmpeg]",
  "cairosvg",
  "kokoro>=0.9.2",
  "misaki[en]",
  "whisperx==3.7.1",
  "torch",
]

[tool.uv]
# define an extra index named "pytorch-cu126"
index = [
  { name = "pytorch-cu126", url = "https://download.pytorch.org/whl/cu126", explicit = true },
]

[tool.uv.sources]
# tell uv to resolve `torch` from that index
torch = { index = "pytorch-cu126" }
